[package]
name = "sniff"
version = "0.1.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnetwork = "0.17.0"
lazy_static = "1.4.0"
pnet = "0.26.0"
regex = "1.4.2"

[target.'cfg(target_os="windows")'.dependencies]
netstat2 = "0.9.0"
sysinfo = "0.15.1"

[target.'cfg(target_os="linux")'.dependencies]
procfs = "0.7.4"
